--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: node-sonarcloud
+name: ci-node-sonarcloud
 on:
   pull_request:
     branches:
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Use Node.js
+        uses: actions/setup-node@v4
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
