--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,22 +1,19 @@
-name: ci-node-sonarcloud
-on:
+name: ci-sonarcloud
+on: 
   pull_request:
     branches:
       - develop
 jobs:
-  sonarcloud:
-    name: SonarCloud
+  check-application:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
-      
+          go-version: 1.15
+      - run: go test
+      - run: go run math.go
+      - run: go test -coverprofile=coverage.out
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
