--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,19 +1,22 @@
-name: ci-sonarcloud
-on: 
+name: ci-node-sonarcloud
+on:
   pull_request:
     branches:
       - develop
 jobs:
-  check-application:
+  sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
         with:
-          go-version: 1.15
-      - run: go test
-      - run: go run math.go
-      - run: go test -coverprofile=coverage.out
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+      
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
