--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
 sonar.projectKey=fabricioje2_node-ci
 sonar.organization=fabricioje2
 
-sonar.sourceEncoding=URF-8
+sonar.sourceEncoding=UTF-8
 
 sonar.sources=src
-sonar.exclusions=**/*_test.go
+sonar.exclusions=**/*_test.js
 
-sonar.tests=.
+sonar.tests=src
 sonar.test.inclusions=**/*_test.js
 sonar.javascript.coveragePlugin=lcov
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
